<resources>
    <string name="app_name">Alumna</string>
    <string name="no_string">""</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_registered">注册</string>
    <string name="title_activity_main">朋友圈</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nearby">附近</string>
    <string name="left_drawer_name">名字</string>
    <string name="left_drawer_edit">点击查看/编辑</string>
    <string name="right_drawer_count">所有校友</string>
    <string name="menu_friend">朋友圈</string>
    <string name="my_alumna">我认识的校友</string>
    <string name="nearby_alumna">附近的校友</string>

    <string name="information">我的信息</string>
    <string name="name">添加姓名信息</string>
    <string name="gender">添加性别信息</string>
    <string name="school">添加学校名称</string>
    <string name="grade">添加年级信息</string>
    <string name="home">添加家乡信息</string>
    <string name="freq_location">经常出没的地点</string>
    <string name="signature">添加你的个性签名</string>
    <string name="wechat_infor">添加微信账号</string>
    <string name="register">注册</string>
    <string name="fotgetpsw">忘记密码?</string>

    <string name="phone">手机号码</string>
    <string name="password1">请输入密码</string>
    <string name="password2">确认密码</string>
    <string name="back_to_login">已有帐号，马上登录</string>
    <string name="modify_inform">不知所措，完善信息</string>
    <string name="jump_button">不了不了,马上使用</string>
    <string name="welcome_text">恭喜你，注册成功</string>
    
</resources>
