<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alumna.view.RegisterActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">
            <TextView
                android:id="@+id/register"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"/>
        </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/register_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textHintGray"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/phoneTv"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:hint="@string/phone"
                android:textColorHint="@color/textHintGray"
                android:inputType="phone"

                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textHintGray"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/usernameTv"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:hint="@string/prompt_username"
                android:textColorHint="@color/textHintGray"

                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textHintGray"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/passwordEt1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password1"
            android:minHeight="40dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"

            android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textHintGray"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordEt2"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password2"
                android:minHeight="40dp"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"

                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:text="@string/action_registered"
            android:background="@drawable/button_login_shape"
            android:textColor="#515151"
            />



        <TextView
            android:id="@+id/login_tv"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textColor="@color/textHintGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/back_to_login"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/modify_inform_btn"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:text="@string/modify_inform"
            android:background="@drawable/button_login_shape"
            android:textColor="#515151"
            />
        <Button
            android:id="@+id/jump_btn"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:text="@string/jump_button"
            android:background="@drawable/button_login_shape"
            android:textColor="#515151"
            />
    </LinearLayout>
</LinearLayout>
