<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2626">

    <TextView
        android:id="@+id/all_alumna_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_drawer_count"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/DrawerLayoutTextStyle"
        android:textColor="@color/plain"/>

    <TextView
        android:id="@+id/friend_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/all_alumna_text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="@style/DrawerLayoutTextStyle"
        android:textColor="@android:color/darker_gray"
        />

    <LinearLayout
        android:id="@+id/friend_circle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/all_alumna_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/linearlayouy_border"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_menu_nearby"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/nearby_alumna"/>
    </LinearLayout>

    <TextView
        android:id="@+id/my_alumna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/friend_circle"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/plain"
        android:text="@string/my_alumna"
        android:layout_marginLeft="40dp"/>

    <View
        android:id="@+id/divide_line"
        android:layout_below="@id/my_alumna"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#b52121"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/right_recycler"
        android:layout_below="@id/divide_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>






</RelativeLayout>