<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <Button
                android:id="@+id/back_Btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_back"
                />
        </android.support.v7.widget.Toolbar>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_view"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:scaleType="centerCrop" />

        <!--这里让这个view率先获得焦点，使得跳转时输入法不会自动弹出来-->
        <View
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#edeaea" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/information"
            android:textColor="@color/colorThemeRed"
            android:textColorHint="@color/textHintGray"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/icon_name" />

            <EditText
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textHintGray"
                android:background="@null"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender_layout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/icon_male" />

            <EditText
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="添加性别信息"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textHintGray"
                android:background="@null"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/school_layout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/icon_school" />

            <EditText
                android:id="@+id/school_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/school"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textHintGray"
                android:background="@null"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grade_layout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/icon_grade" />

            <EditText
                android:id="@+id/grade_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/grade"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textHintGray"
                android:background="@null"
                android:textSize="16sp" />
        </LinearLayout>





        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/icon_location" />

            <EditText
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/freq_location"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textHintGray"
                android:background="@null"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/signature_layout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/icon_work" />

            <EditText
                android:id="@+id/signature_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/signature"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textHintGray"
                android:background="@null"
                android:textSize="16sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#edeaea"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="我的社交账号"
            android:textColor="@color/colorThemeRed"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/wechat_layout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/icon_wechat" />

            <EditText
                android:id="@+id/text_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/wechat_infor"
                android:textColor="@android:color/black"
                android:textColorHint="@color/textHintGray"
                android:background="@null"
                android:textSize="16sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="#edeaea" />





    </LinearLayout>

</ScrollView>




